setup/k8s/02-apps/02-flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        ports:
        - containerPort: 8191
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
spec:
  selector:
    app: flaresolverr
  ports:
    - port: 8191
      targetPort: 8191
  type: ClusterIP
