setup/k8s/02-apps/02-webshare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webshare
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webshare
  template:
    metadata:
      labels:
        app: webshare
    spec:
      containers:
      - name: 3proxy
        image: ghcr.io/tarampampam/3proxy
        ports:
        - containerPort: 3128
          name: proxy
        - containerPort: 1080
          name: socks
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
        volumeMounts:
        - name: configs-source
          mountPath: /etc/3proxy/3proxy.cfg
          subPath: 3proxy/3proxy.cfg
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-source-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webshare
  namespace: media
spec:
  selector:
    app: webshare
  ports:
    - name: proxy
      port: 3128
      targetPort: 3128
    - name: socks
      port: 1080
      targetPort: 1080
  type: ClusterIP
