setup/k8s/02-apps/02-emby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      containers:
      - name: emby
        image: emby/embyserver_arm64v8:latest
        ports:
        - name: webui
          containerPort: 8096
        - name: discovery
          containerPort: 7359
          protocol: UDP
        resources:
          limits:
            memory: 4Gi
          requests:
            memory: 1Gi
        volumeMounts:
        - name: configs-source
          mountPath: /config
          subPath: emby
        - name: media
          mountPath: /media
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-source-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media
spec:
  selector:
    app: emby
  ports:
    - name: webui
      port: 8096
      targetPort: 8096
    - name: discovery
      port: 7359
      targetPort: 7359
      nodePort: 7359
      protocol: UDP
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emby-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "emby.media.lan"
      secretName: media-lan-tls
    - hosts:
      - "emby.apedamo.duckdns.org"
      secretName: media-wan-tls
  rules:
  - host: "emby.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port:
              number: 8096
  - host: "emby.apedamo.duckdns.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emby
            port:
              number: 8096
