setup/k8s/02-apps/02-prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 128Mi
        volumeMounts:
        - name: configs-source
          mountPath: /config
          subPath: prowlarr
        - name: media
          mountPath: /media
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-source-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "prowlarr.media.lan"
    secretName: media-lan-tls
  rules:
  - host: "prowlarr.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
