setup/k8s/02-apps/02-qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - name: webui
              containerPort: 8081
            - name: torrent-tcp
              containerPort: 53471
              protocol: TCP
            - name: torrent-udp
              containerPort: 53471
              protocol: UDP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: qbittorrent
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: configs-source-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8081
      targetPort: 8081
    - name: torrent-tcp
      port: 53471
      targetPort: 53471
      nodePort: 53471
      protocol: TCP
    - name: torrent-udp
      port: 53471
      targetPort: 53471
      nodePort: 53471
      protocol: UDP
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "qbittorrent.media.lan"
    secretName: media-lan-tls
  rules:
  - host: "qbittorrent.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 8081
