setup/k8s/02-apps/02-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: ${SONARR_IMAGE_NAME}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8989
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 256Mi
        volumeMounts:
        - name: configs-source
          mountPath: /config
          subPath: sonarr
        - name: downloads
          mountPath: /downloads
        - name: media
          mountPath: /media
        - name: scripts
          mountPath: /opt/scripts
          readOnly: true
      volumes:
      - name: configs-source
        persistentVolumeClaim:
          claimName: configs-source-pvc
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      - name: scripts
        persistentVolumeClaim:
          claimName: scripts-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "sonarr.media.lan"
    secretName: media-lan-tls
  rules:
  - host: "sonarr.media.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              number: 8989
